--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
                 src="https://assets8.lottiefiles.com/packages/lf20_q7uarxsb.json"
                 background="transparent"
                 speed="1"
-                style="width: 200px; height: 200px;"
+                style="width: 100%; max-width: 300px; height: auto;"
                 autoplay>
             </lottie-player>
-        </div>        
+        </div>
     </div>
-    <script src="script.js"></script>
     <div id="popup" class="popup hidden">
         <div class="popup-content">
             <p id="popup-message"></p>
             <button onclick="closePopup()" class="popup-close-btn">Close</button>
         </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 </html>
